Fix align in speaker section

--- a/pyconph/static/css/index.css
+++ b/pyconph/static/css/index.css
@@ -200,10 +200,6 @@ body {
   min-height: 15vw;
 }
 
-.other-profile {
-  margin-top: 2vw;
-  max-height: 30vw;
-}
 
 .other-company {
   font-family: "Circular-Pro-Bold";
